--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "axios": "^0.18.0",
     "copy-dir": "^0.4.0",
     "vue": "^2.5.11",
-    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
@@ -27,6 +26,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
