--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -38,7 +39,7 @@
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^4.26.0",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.1.10"
   }
 }
