--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "hosted-git-info": ">=2.8.9"
   }
 }
