--- a/package.json
+++ b/package.json
@@ -41,6 +41,13 @@
     "webpack": "^4.26.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.1.10",
-    "hosted-git-info": ">=2.8.9"
+    "hosted-git-info": ">=2.8.9",
+    "sockjs": ">=0.3.20",
+    "yargs-parser": ">=5.0.0-security.0",
+    "node-forge": ">=0.10.0",
+    "minimist": ">=1.2.3",
+    "kind-of": ">=6.0.3",
+    "serialize-javascript": ">=3.1.0",
+    "set-value": ">=2.0.1"
   }
 }
